fix event stamp on tablet

--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -237,16 +237,16 @@
 .stamp {
   position: absolute;
   z-index: 1;
-  height: 150px;
   svg {
     width: 100%;
     height: 100%;
   }
 }
 .stamp--small {
-  top: -1px;
+  top: -10px;
   right: -3px;
   height: 150px;
+  width: 150px;
   transform: rotate(51deg);
 }
 .stamp--big {
@@ -258,9 +258,8 @@
 .stamp__text {
   text-transform: uppercase;
   letter-spacing: 10px;
-  font-size: 6rem;
+  font-size: 4.3rem;
 }
-
 .stamp__text--supported, .stamp__text--general {
   fill: #9b9b9b;
 }
